--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>miftahul fikri pratama</h1>
-<img src="img/1.jpeg" alt="" width="200">
+<img src="1.jpeg" alt="" width="200">
 <h2>profil pribadi</h2>
 <p>Lorem ipsum dolor sit,<br> amet consectetur adipisicing elit. Architecto quia, enim a sequi adipisci eligendi modi laborum quas! Molestiae, non facilis hic cum magni officia modi atque ad libero ex dolorem, aut rem molestias cupiditate autem nisi iure ducimus repudiandae rerum ea voluptatibus nobis a maiores. Saepe ad iste itaque!</p>
 <hr>
